fix: deep code quality cleanup for 1.3.1
- Replace all e.printStackTrace() (8 occurrences) with SLF4J log.error()
  in ClassUtil, ServiceHandlerUtil, DataBindUtil
- Replace SimpleDateFormat with thread-safe DateTimeFormatter in
  ServiceHandlerUtil, ServiceHandler, Cookie (6 occurrences)
- Implement errorResponseHtml() and errorResponseJson() with structured
  HTML/JSON error responses (previously returned empty strings)
- Make ObjectMapper a static singleton in JsonViewHandler (was created
  per-request)
- Fix HttpErrorMessage field typo: timestrap -> timestamp (keep deprecated
  getter for backward compatibility)
- Use StandardCharsets.UTF_8 instead of string "utf-8" in URL decoding
- Remove dead code (unused Cookie header read in HtmlViewHandler)
- Log POST parameter read failures instead of silently ignoring IOException
- Add 28 new tests: ServiceHandlerUtilErrorResponseTest (8),
  HttpRequestMethodTest (3), CookieTest (10), JsonViewHandlerTest (4),
  HtmlViewHandlerTest (3)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>